[package]
name = "game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking", "jpeg"] }
bevy-inspector-egui = "0.19.0"
bevy_rapier3d = { version = "0.22.0", features = ["simd-stable", "parallel", "debug-render-3d"] }
rand = "0.8.5"
